--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   <div class="skills">
     <h2>My Skills</h2>
     <div class="skillrow1">
-      <img src="https://cdn-icons.flaticon.com/png/512/2115/premium/2115955.png?token=exp=1641284360~hmac=77b958b5cd2db5f69f9e63d7da5f5d3a" class="code-img" alt="">
+      <img src="code.png" class="code-img" alt="">
       <h2>Coding</h2>
       <p>I have a quite a more experience in coding.Mainly in C, Python and  C++ programming. I am comfortable with front end web development.</p>
     </div>
     <div class="skillrow2">
-      <img src="https://cdn-icons.flaticon.com/png/512/3006/premium/3006975.png?token=exp=1641286426~hmac=9f079de6f866a39cfb92bdde4e331134" class="ballimg" alt="">
+      <img src="cricket.png" class="ballimg" alt="">
       <h2>Sports</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
 
