--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
   <hr>
   <div class="connect">
     <h2>Connect with me</h2>
-    <form class="" action="mailto:babashankarsn@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:babashankarsn@gmail.com" method="post" enctype="text/plain">
       <label>Your Name</label>
-      <input type="text" name="Myname" value="" autocomplete="off"><br>
+      <input type="text" name="Myname" value="" required><br>
       <label>Your Email</label>
-      <input type="email" name="Mymail" value="" autocomplete="off"><br>
+      <input type="email" name="Mymail" value="" required><br>
       <label>Your Comment</label>
-      <input type="text" name="Comment" value="" class="comment" autocomplete="off"><br>
+      <input type="text" name="Comment" value=""  required><br>
       <input type="submit" name="submit" value="submit">
 
     </form>
