--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <h2>Connect with me</h2>
     <form action="mailto:babashankarsn@gmail.com" method="post" enctype="text/plain">
       <label>Your Name</label>
-      <input type="text" name="Myname" value="" required><br>
+      <input type="text" name="Myname"  required><br>
       <label>Your Email</label>
-      <input type="email" name="Mymail" value="" required><br>
+      <input type="email" name="Mymail"  required><br>
       <label>Your Comment</label>
-      <input type="text" name="Comment" value=""  required><br>
+      <input type="text" name="Comment"  required><br>
       <input type="submit" name="submit" value="submit">
 
     </form>
